Re-enable ByteBuddy experimental flag